--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body onclick="dice()">
     <div class="container">
-      <div class="name">REFRESH ME</div>
+      <div class="name">CLICK ME😎</div>
       <br /><br />
       <div class="subname">TO START AGAIN</div>
     </div>
